feat: qiime2 import and assign

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(assign_taxa)
 export(demo_path)
 export(iqi)
+export(qiime2_taxa_assign)
 import(RRF)
 importFrom(dada2,assignTaxonomy)
 importFrom(dada2,dada)
@@ -14,10 +15,14 @@ importFrom(dada2,makeSequenceTable)
 importFrom(dada2,mergePairs)
 importFrom(dada2,plotErrors)
 importFrom(dada2,removeBimeraDenovo)
+importFrom(dplyr,across)
+importFrom(dplyr,contains)
 importFrom(dplyr,everything)
+importFrom(dplyr,group_by)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,starts_with)
+importFrom(dplyr,summarize_all)
 importFrom(purrr,map_df)
 importFrom(rappdirs,user_data_dir)
 importFrom(rlang,.data)
