--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(assign_taxa)
 export(demo_path)
 export(iqi)
 export(qiime2_taxa_assign)
+export(survey_import)
 import(RRF)
 importFrom(dada2,assignTaxonomy)
 importFrom(dada2,dada)
